# polymarket-bot

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PULL_REQUEST_PROCESS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.next/: trace  trace-build
collector/: __main__.py  server.py
config/: default.yaml
dashboard/: forensics.js  index.html
dashboard-next/: .env.local.example  package-lock.json  package.json
data/: feature_config.json  market_history.db  optimal_strategy_consensus.json
docs/: AIEngineering.md  ANALYSIS_PROCESS.md  ChainlinkDataStreams.md  FINAL_PLAN.md  MARKET_MAKER_PLAN.md  ai-prompt-map.md  chainlink-onchain-plan.md  chainlink-streams-plan.md  code-logic-ai-improvement-plan.md  codex-review-fixes-plan.md  forensics.md  indicators-catalog.md  iter035-timeout-analysis.md  polymarket-adapter-plan.md  prediction-model-features.md  prompt-overhaul-plan.md
logs/: agent_state.json  dashboard_data.json  debug_trace_20260301.md  iterations.json  ml_model.json
notebooks/: 0 - build_features.ipynb  1 - data_exploration.ipynb  1 - model_training.ipynb  10 - export_model.ipynb  10 - scaling_in.ipynb  11 - rf_optimization.ipynb  11 - rf_scaling_in.ipynb  12 - export_model.ipynb  12 - lr_vs_rf.ipynb  12 - model_comparison.ipynb  13 - export_rf_model.ipynb  14 - xgb_optimization.ipynb  15 - export_xgb_model.ipynb  2 - data_experiments.ipynb  2 - technical_indicators.ipynb  3 - model_training.ipynb  3 - optimal_strategy.ipynb  4 - advanced_models.ipynb  4 - data_experiments.ipynb  5 - live_evaluation.ipynb  5 - optimal_strategy.ipynb  6 - advanced_models.ipynb  6 - reversal_indicators.ipynb  7 - live_evaluation.ipynb  7 - single_bet_strategies.ipynb  8 - reversal_indicators.ipynb  8 - scaling_in.ipynb  9 - rf_scaling_in.ipynb  9 - single_bet_strategies.ipynb  _dnn_worker.py  data_exploration.ipynb  deep_neural_network.py  evaluator.py  feature_utils.py  strategy_engine.py  technical_indicators.ipynb  technicals.py
polybot/: __main__.py
scripts/: db_stats.sh  generate_api_key.py  gh_app_token.py  migrate_legacy.py  verify_resolutions.py
tests/: conftest.py  test_adaptive_entry.py  test_agent.py  test_analysis_engine.py  test_calibration.py  test_config.py  test_context_builder_reversal.py  test_context_builder_velocity.py  test_dashboard_message_builder.py  test_datastore.py  test_decision_engine.py  test_deep_analysis.py  test_deep_report.py  test_execution_helpers.py  test_exit_tracker.py  test_factory.py  test_forensics.py  test_forensics_refactor.py  test_indicators.py  test_indicators_processor.py  test_indicators_results.py  test_knowledge.py  test_live_execution.py  test_logging.py  test_market_data.py  test_market_monitor.py  test_ml_scorer.py  test_models.py  test_prefilter.py  test_prefilter_checker.py  test_resolution.py  test_reversal_regime.py  test_risk.py  test_rotation.py  test_server.py  test_shared_state.py  test_simulator.py  test_tasks_context_builder.py  (+5 more)
(+455 files in other folders)
