[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polybot"
version = "0.11.0"
description = "AI-driven paper trading agent for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "py-clob-client>=0.6.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
polybot-analyze = "polybot.analysis.report:main"
polybot-archive = "polybot.analysis.archive:main"
polybot-compare = "polybot.analysis.compare:main"
polybot-validate = "polybot.analysis.validate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
