[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polybot"
version = "0.19.0"
description = "AI-driven paper trading agent for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "py-clob-client>=0.6.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "eth-abi>=5.0.0",
    "pyee>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "tqdm>=4.67.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
    "ipykernel>=7.2.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

# Console scripts removed — legacy code moved to legacy/ folder

[tool.setuptools.packages.find]
where = ["."]
include = ["polybot*", "polybot_data*", "collector*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["polybot", "polybot_data", "collector", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line-too-long — already at 120, remaining are URLs/strings
    "SIM108",  # ternary — multi-line if/else is often clearer
    "SIM105",  # contextlib.suppress — try/except/pass is explicit
    "SIM102",  # collapsible-if — nested ifs are often clearer with comments
    "UP042",   # str-enum — keep str+Enum for backwards compat
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
